pwa support addedd

--- a/src/app/skills/myskills/myskills.component.scss
+++ b/src/app/skills/myskills/myskills.component.scss
@@ -4,6 +4,9 @@
 .darkBackground{
     background-color:black ;
 }
+.whiteColor{
+    color: white;
+}
 .myProjectHeading{
     font-size: 40px;
     color: dodgerblue;
