--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
         <app-mynavbar 
         [isSideNavOpen]="isSideNavOpen"
         (sideNavOpened)="toggleSideNav('open')"
+        [darkModeOn]="darkModeOn"
         ></app-mynavbar>
 
 
