--- a/src/app/navbar/mynavbar/mynavbar.component.html
+++ b/src/app/navbar/mynavbar/mynavbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
     <img height="48px" class="profilepicture" src="./../../../assets/sanjay.jpg" />
     <div class="reversedFlexbox">
-        <mat-icon class="addingStylesToMenuIcon" (click)="toggleSideNav()">
+        <mat-icon [ngClass]="{'yellowColorClass':darkModeOn,'blueColorClass':!darkModeOn,'addingStylesToMenuIcon':true}"  (click)="toggleSideNav()">
             menu
         </mat-icon>
     </div>
