--- a/src/app/navbar/sidenavbar/sidenavbar.component.html
+++ b/src/app/navbar/sidenavbar/sidenavbar.component.html
@@ -32,7 +32,7 @@
     <mat-list-item class="centeringContent" role="button" >
         
         <mat-icon  
-        [class]="darkModeOn ? 'yellowColor': 'blueColor' " 
+        [class]="darkModeOn ? 'yellowColorClass': 'blueColorClass' " 
         (click)="changeTheme()"
             >
             {{ darkModeOn ? 'wb_sunny' : 'bedtime'}}
