--- a/src/app/projects/myprojects/myprojects.component.html
+++ b/src/app/projects/myprojects/myprojects.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="{'container':true,'darkBackground':darkModeOn}">
 
     <div class="centerContent">
-        <h1  [ngClass]="{'whiteColor':darkModeOn,'myProjectHeading':true}">
+        <h1  [ngClass]="{'yellowColorClass':darkModeOn,'blueColorClass':!darkModeOn,'myProjectHeading':true}">
            {{myProjectHeading}}
             <!-- <mat-icon>code</mat-icon> -->
         </h1>
