--- a/src/app/shared/ask-user-confirmation/ask-user-confirmation.component.scss
+++ b/src/app/shared/ask-user-confirmation/ask-user-confirmation.component.scss
@@ -12,8 +12,8 @@ p{
 }
 
 .yesButton{
-    background-color: royalblue;color: white;
+    background-color: rgba(60, 100, 180, 1) ;color: white;
 }
 button:hover{
-    box-shadow: 0px 0px 20px grey;
+    box-shadow: 0px 0px 15px grey;
 }
