--- a/src/app/skills/myskills/myskills.component.html
+++ b/src/app/skills/myskills/myskills.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="{'container':true,'darkBackground':darkModeOn}">
 
     <div class="centerContent">
-        <h1  [ngClass]="{'blackColor':!darkModeOn,'myProjectHeading':true}">
+        <h1  [ngClass]="{'blueColorClass':!darkModeOn,'yellowColorClass':darkModeOn,'myProjectHeading':true}">
            My Skills
             <!-- <mat-icon>code</mat-icon> -->
         </h1>
