--- a/src/app/shared/custom-snackbar/custom-snackbar.component.html
+++ b/src/app/shared/custom-snackbar/custom-snackbar.component.html
@@ -1,1 +1,8 @@
-<p>custom-snackbar works!</p>
+<div class="container">
+    <div class="text">{{info}}</div>
+    <div class="icon">
+        <button mat-icon-button (click)="close()">
+            <mat-icon>close</mat-icon>
+        </button>
+    </div>
+</div>
