--- a/src/app/projects/myproject/myproject.component.scss
+++ b/src/app/projects/myproject/myproject.component.scss
@@ -6,14 +6,32 @@ summary{
     font-size: 16px;
 }
 
+@keyframes learn {
+    0% {opacity: 0;}
+    10% {opacity: 0.1}
+    20% {opacity: 0.2}
+    30% {opacity: 0.3;}
+    40% {opacity: 0.4;}
+    50% {opacity: 0.5}
+    60% {opacity: 0.6;}
+    70% {opacity: 0.7;}
+    80% {opacity: 0.8;}
+    90% {opacity: 0.9;}
+    100% {opacity: 1.0}
+   }
+
+
 
 .projectcard{
     box-sizing: border-box;
-    box-shadow: 0px 0px 50px grey;
+    box-shadow: 0px 0px 40px grey; 
     min-height: 130px !important;
     border-radius: 8px;
     width: 400px ;
     margin: 20px ;
+    animation-name: learn;
+    animation-duration: 2s;
+    opacity: 1;
 }
 
 @media screen and (min-width:1170px) and (max-width:1320px) {
@@ -61,12 +79,23 @@ summary{
     margin: 5px;
     margin-left: 20px;
 }
-.skillcard{
+.yellowskillcard{
     white-space: nowrap;
     padding: 8px;
     margin: 5px;
-    background-color: dodgerblue;
     color: white;
+    background-color: rgba(255, 200, 0, 0.8);
+    font-size: 16px;
+
+}
+
+.blueskillcard{
+    white-space: nowrap;
+    padding: 8px;
+    margin: 5px;
+    color: white;
+    background-color: rgba(60, 100, 180, 0.8);
+    font-size: 16px;
 }
 
 .skillcard:hover{
