--- a/src/app/navbar/mynavbar/mynavbar.component.html
+++ b/src/app/navbar/mynavbar/mynavbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <img height="48px" class="profilepicture" src="./../../../assets/sanjay.jpg" />
+    <img height="48px" class="profilepicture" src="./../../../assets/sanjay200.jpg" />
     <div class="reversedFlexbox">
         <mat-icon [ngClass]="{'yellowColorClass':darkModeOn,'blueColorClass':!darkModeOn,'addingStylesToMenuIcon':true}"  (click)="toggleSideNav()">
             menu
