--- a/src/app/home/myhome/myhome.component.html
+++ b/src/app/home/myhome/myhome.component.html
@@ -3,7 +3,7 @@
     <mat-card [ngClass]="{'card':'true','addingBoxShadowInLightMode': !darkModeOn}">
         
         <div class="takeFullHeightAndCenterForImage">
-            <img width="170px" height="170" [class]=" darkModeOn ? 'darkImageStyle':'lightImageStyle' " src="../../../assets/sanjay.jpg">
+            <img width="170" height="170" [class]=" darkModeOn ? 'darkImageStyle':'lightImageStyle' " src="../../../assets/sanjay200.jpg">
         </div>
         
         <div class="takeFullHeightAndCenter">
@@ -14,11 +14,11 @@
 
             <div>
                 <a href="https://www.linkedin.com/in/sanjay-garg-26bab6153/" target="_blank">
-                    <img src="../../../assets/linkedin.png" height="40px" width="40px" />
+                    <img src="../../../assets/linkedin.png" height="40" width="40" />
                 </a>
                 <a style="margin-left: 20px;" 
                 href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sgarg5858@gmail.com" target="_blank">
-                <img src="../../../assets/gmail-logo.png" height="45px" width="45px" />
+                <img src="../../../assets/gmail-logo.png" height="45" width="45" />
                 </a>
 
 
