--- a/src/app/skills/myskill/myskill.component.html
+++ b/src/app/skills/myskill/myskill.component.html
@@ -1,4 +1,4 @@
 <mat-card class="skillcard">
-    <img loading="lazy" [src]="skill.url" height="150px" width="150px" />
+    <img  loading="lazy" [src]="skill.url" height="150px" width="150px" [alt]="skill.name"/>
     <p class="skillname"> {{skill.name}}</p>
 </mat-card>
