--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,3 +51,18 @@ $angular-dark-theme: mat-dark-theme(
 .blueColorClass{
   color: rgba(60, 100, 180, 1);
 }
+
+@keyframes learn {
+  0% {opacity: 0; margin-top: 200px;}
+  10% {opacity: 0.1}
+  20% {opacity: 0.2}
+  30% {opacity: 0.3;}
+  40% {opacity: 0.4;}
+  50% {opacity: 0.5;}
+  60% {opacity: 0.6;}
+  70% {opacity: 0.7;}
+  80% {opacity: 0.8;}
+  90% {opacity: 0.9;}
+  100% {opacity: 1.0}
+ }
+
