--- a/src/app/home/myhome/myhome.component.html
+++ b/src/app/home/myhome/myhome.component.html
@@ -3,22 +3,22 @@
     <mat-card [ngClass]="{'card':'true','addingBoxShadowInLightMode': !darkModeOn}">
         
         <div class="takeFullHeightAndCenterForImage">
-            <img width="170" height="170" [class]=" darkModeOn ? 'darkImageStyle':'lightImageStyle' " src="../../../assets/sanjay200.jpg">
+            <img width="170" height="170" [class]=" darkModeOn ? 'darkImageStyle':'lightImageStyle' " src="../../../assets/sanjay200.jpg" alt="profile picture">
         </div>
         
         <div class="takeFullHeightAndCenter">
             <h1 class="name">Sanjay Garg</h1>      
-            <h3 class="jobTitle"> Frontend Engineer</h3>
+            <h2 class="jobTitle"> Frontend Engineer</h2>
             <h3 class="mainSkills">JavaScript | Angular </h3>
             <h4 class="location">Gurgaon, India</h4>
 
             <div>
-                <a href="https://www.linkedin.com/in/sanjay-garg-26bab6153/" target="_blank">
-                    <img src="../../../assets/linkedin.png" height="40" width="40" />
+                <a href="https://www.linkedin.com/in/sanjay-garg-26bab6153/" target="_blank"  aria-label="link to my linkedin profile">
+                    <img src="../../../assets/linkedin.png" alt="linked profile" height="40" width="40" />
                 </a>
                 <a style="margin-left: 20px;" 
-                href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sgarg5858@gmail.com" target="_blank">
-                <img src="../../../assets/gmail-logo.png" height="45" width="45" />
+                href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sgarg5858@gmail.com" aria-label="link to my gmail" target="_blank">
+                <img src="../../../assets/gmail-logo.png" alt="gmail contact"  height="45" width="45" />
                 </a>
 
 
