--- a/src/app/navbar/mynavbar/mynavbar.component.html
+++ b/src/app/navbar/mynavbar/mynavbar.component.html
@@ -1,8 +1,10 @@
 <mat-toolbar>
-    <img height="48px" class="profilepicture" src="./../../../assets/sanjay200.jpg" />
-    <div class="reversedFlexbox">
-        <mat-icon [ngClass]="{'yellowColorClass':darkModeOn,'blueColorClass':!darkModeOn,'addingStylesToMenuIcon':true}"  (click)="toggleSideNav()">
-            menu
-        </mat-icon>
+    <img height="48px" class="profilepicture" src="./../../../assets/sanjay200.jpg" alt="profile logo"/>
+    <div class="reversedFlexbox" role="button" >
+        <button mat-icon-button (click)="toggleSideNav()" aria-label="Menu">
+            <mat-icon role="button" [ngClass]="{'yellowColorClass':darkModeOn,'blueColorClass':!darkModeOn,'addingStylesToMenuIcon':true}"> 
+                menu
+            </mat-icon>
+        </button>
     </div>
 </mat-toolbar>
